kubernetes/postgresql/fineractdb-deployment.yml

apiVersion: v1
kind: Service
metadata:
  labels:
    app: fineract-server
  name: fineractdb
spec:
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  selector:
    app: fineract-server
    tier: fineractdb
  clusterIP: None

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: fineract-server
  name: fineractdb
spec:
  selector:
    matchLabels:
      app: fineract-server
      tier: fineractdb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: fineract-server
        tier: fineractdb
    spec:
      containers:
        - image: postgres:17.5
          name: postgresql
          resources:
            requests:
              memory: "1Gi"
              cpu: "1000m"
            limits:
              memory: "5Gi"
              cpu: "2000m"
          ports:
            - containerPort: 5432
              name: fineractdb
          volumeMounts:
            - name: fineractdb-initdb
              mountPath: /docker-entrypoint-initdb.d/
            #- name: fineractdb-persistent-storage
            #  mountPath: /var/lib/postgresql/
      volumes:
        - name: fineractdb-initdb
          configMap:
            name: fineractdb-initdb
        - name: fineractdb-persistent-storage
          persistentVolumeClaim:
            claimName: fineractdb-pv-claim
