kubernetes/postgresql/fineractpostgresql-deployment.yml

apiVersion: v1
kind: Service
metadata:
  labels:
    app: fineract-server
  name: fineractpostgresql
spec:
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  selector:
    app: fineract-server
    tier: fineractpostgresql
  clusterIP: None

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: fineract-server
  name: fineractpostgresql
spec:
  selector:
    matchLabels:
      app: fineract-server
      tier: fineractpostgresql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: fineract-server
        tier: fineractpostgresql
    spec:
      containers:
        - image: postgres:17.5
          name: postgres
          resources:
            requests:
              memory: "1Gi"
              cpu: "1000m"
            limits:
              memory: "5Gi"
              cpu: "2000m"
          livenessProbe:
            exec:              
              command: [ "CMD", "pg_isready", "-q", "-d", "postgres", "-U", "postgres" ]
            failureThreshold: 10
            timeoutSeconds: 10
          readinessProbe:
            exec:
              command:
                - CMD 
                - pg_isready -q -d postgres -U postgres              
            failureThreshold: 10
            initialDelaySeconds: 5
            periodSeconds: 5
          ports:
            - containerPort: 5432
              name: fineractpostgresql
          volumeMounts:
            - name: fineractpostgresql-initdb
              mountPath: /docker-entrypoint-initdb.d/
            - name: fineractpostgresql-persistent-storage
              mountPath: /var/lib/mysql/
      volumes:
        - name: fineractpostgresql-initdb
          configMap:
            name: fineractpostgresql-initdb
        - name: fineractpostgresql-persistent-storage
          persistentVolumeClaim:
            claimName: fineractpostgresql-pv-claim
